sass en contactos

--- a/scss/layout/_media-320.scss
+++ b/scss/layout/_media-320.scss
@@ -4,4 +4,13 @@
             font-size: 35px;
         }
     }
+    .fot-c{
+        a{
+            font-size: 13px;
+        }
+        
+    }
+    .titulo-c{
+        font-size: 30px;
+    }
 }
