--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,6 @@ body {
     background-color: black;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
     padding: 2px; }
     body header .grid {
       display: grid;
@@ -136,11 +134,6 @@ main {
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(4, auto);
     grid-template-areas: "rainbow rainbow rainbow" ". 1 ." "2 . ." "3 3 3"; }
-  main .rainbow {
-    grid-area: rainbow;
-    width: 100%;
-    height: 20px;
-    background-color: red; }
   main .titulo {
     grid-area: 1; }
   main .subtitulo {
@@ -193,6 +186,49 @@ footer .logo {
   width: 40px;
   height: 40px; }
 
+.header-b {
+  background-color: black;
+  width: 100%;
+  height: 100%; }
+
+nav img {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px; }
+
+nav ul li a {
+  text-decoration: none;
+  color: #F2F1F0;
+  padding: 5px;
+  border-radius: 35%; }
+  nav ul li a img:hover {
+    background-color: #E9D5DA;
+    border-radius: 30%;
+    padding: 5px; }
+  nav ul li a img {
+    background-color: #F2F1F0;
+    border-radius: 30%;
+    padding: 5px;
+    width: 40px;
+    height: 40px; }
+
+main {
+  background-image: url("../assets/imagenes/white-wall.jpg");
+  background-size: 100% 100%; }
+
+.toggler-c {
+  background-color: #F2F1F0;
+  border-radius: 20%; }
+
+.boton {
+  background-color: #F2F1F0;
+  font-family: 'Poppins', sans-serif;
+  text-align: justify;
+  padding: 4px;
+  margin: 2px;
+  border-radius: 25%;
+  border: #7F7C82; }
+
 @media (max-width: 1024px) {
   .grid {
     display: flex;
@@ -205,6 +241,11 @@ footer .logo {
       flex-wrap: wrap; }
       .nav ul li {
         justify-content: space-evenly; } }
+
+@media (max-width: 991px) {
+  .nav-item {
+    display: flex;
+    justify-content: center; } }
 
 @media (max-width: 768px) {
   .grid {
@@ -271,7 +312,7 @@ footer .logo {
       width: 30px;
       height: 30px; }
   h1 {
-    font-size: 25px; }
+    font-size: 22px; }
   h2 {
     font-size: 15px; }
   p {
@@ -304,8 +345,14 @@ footer .logo {
     justify-content: space-evenly; }
   .fot-2 a {
     font-family: 'Poppins', sans-serif;
-    font-size: 15px; } }
+    font-size: 15px; }
+  .titulo-c {
+    font-size: 30px; } }
 
 @media (max-width: 320px) {
   main h1 {
-    font-size: 35px; } }
+    font-size: 35px; }
+  .fot-c a {
+    font-size: 13px; }
+  .titulo-c {
+    font-size: 30px; } }
