--- a/scss/layout/_media-437.scss
+++ b/scss/layout/_media-437.scss
@@ -24,7 +24,7 @@
         }
     }
     h1{
-        font-size: 25px;
+        font-size: 22px;
     }
     h2{
         font-size: 15px;
@@ -68,5 +68,7 @@
         font-family: 'Poppins', sans-serif;
         font-size: 15px;
     }
-    
+    .titulo-c{
+        font-size: 30px;
+    }
 }
