--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,9 @@
 @import "./layout/main-index";
 @import "./layout/main-pages";
 @import "./layout/footer";
+@import "./layout/bootstrap";
 @import "./layout/media-1024";
+@import "./layout/media-991";
 @import "./layout/media-768";
 @import "./layout/media-437";
 @import "./layout/media-320";
