--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,46 @@ main {
   border-radius: 25%;
   border: #7F7C82; }
 
+@keyframes dance6123 {
+  to {
+    background-position: var(--width); } }
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #1b1b1b;
+  padding: 10px 30px;
+  border: 1px solid;
+  border-radius: 1000px;
+  display: inline-block;
+  transition: all .2s;
+  position: relative; }
+
+.btn:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(27, 27, 27, 0.5); }
+
+.btn:active {
+  transform: translateY(-3px); }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+  transition: all .3s; }
+
+.btn:hover::after {
+  background-color: #dc94e2;
+  transform: scaleX(1.4) scaleY(1.5);
+  opacity: 0; }
+
 @media (max-width: 1024px) {
   .grid {
     display: flex;
