--- a/scss/layout/_media-320.scss
+++ b/scss/layout/_media-320.scss
@@ -4,6 +4,9 @@
             font-size: 35px;
         }
     }
+    p{
+        font-size: 8.5px;
+    }
     .fot-c{
         a{
             font-size: 13px;
