--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -16,7 +16,7 @@ footer{
     }
 }
 .grid-footer{
-    background-color: #7F7C82;
+    background-color: #B2B2B2;
     padding: 2px;
     @include grid(repeat(5,auto),1fr);
     grid-template-areas: 
@@ -40,4 +40,148 @@ footer{
 .icon{
     width: 40px;
     height: 40px;
+}
+
+// ANIMACIONES
+.card-l ul {
+    width: 200px;
+    height: 90px;
+    border-radius: 4px;
+    background: #B2B2B2;
+    display: flex;
+    gap: 5px;
+    padding: .4em;
+}
+.card-l li {
+    height: 100%;
+    flex: 1;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 2px;
+    transition: all .5s;
+    background: #B2B2B2;
+    border: 1px solid #3E2C41;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}  
+.card-l li:hover {
+    flex: 4;
+}
+
+.card-l a {
+    font-family: $fuente-texto;
+    font-size: 10px;
+    min-width: 14em;
+    padding: .5em;
+    text-align: center;
+    transform: rotate(-90deg);
+    transition: all .5s;
+    color: black;
+    letter-spacing: .1em;
+}
+.card-l a:hover {
+    transform: rotate(0);
+}
+
+.card-f {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #e7e7e7;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
+    height: 50px;
+    width: 150px;
+}
+.card-f::before, .card-f::after {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    transition: 0.25s linear;
+    z-index: 1;
+}
+.card-f::before {
+    content: "";
+    left: 0;
+    justify-content: flex-end;
+    background-color: #444444;
+}
+.card-f::after {
+    content: "";
+    right: 0;
+    justify-content: flex-start;
+    background-color: #444444;
+}
+.card-f:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.card-f:hover span {
+    opacity: 0;
+    z-index: -3;
+}
+.card-f:hover::before {
+    opacity: 0.5;
+    transform: translateY(-100%);
+}
+.card-f:hover::after {
+    opacity: 0.5;
+    transform: translateY(100%);
+}
+.card-f span {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: whitesmoke;
+    font-family: $fuente-texto;
+    font-size: 20px;
+    font-weight: 700;
+    opacity: 1;
+    transition: opacity 0.25s;
+    z-index: 2;
+}
+
+.card-f .social-link {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 100%;
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.25s;
+}
+
+.card-f .social-link svg {
+    text-shadow: 1px 1px rgba(31, 74, 121, 0.7);
+    transform: scale(1);
+}
+
+.card-f .social-link:hover {
+    background-color: rgba(249, 244, 255, 0.774);
+    animation: bounce_613 0.4s linear;
+}
+
+@keyframes bounce_613 {
+    40% {
+        transform: scale(1.4);
+    }
+    60% {
+        transform: scale(0.8);
+    }
+    80% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
