--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,9 @@
 body{
     padding: 2px;
+    scrollbar-width: thin;
+    scrollbar-color: #B2B2B2;
     header{
-        background-color: black;
+        background-color: #20262E;
         width: 100%;
         height: 100%;
         padding: 2px;
@@ -54,4 +56,11 @@ body{
             
         }
     }
+}
+body::-webkit-scrollbar{
+    width: 7px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color:#B2B2B2;
+    border-radius: 20px;       
 }
