--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -18,11 +18,30 @@ main{
     .tapas{
         grid-area: 3;
         display: grid;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1 auto;
         gap: 20px;
         display: flex;
         justify-content: center;
         padding: 15px;
     }
+    .card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        width: fit-content;
+        height: 500px;
+        overflow: auto;
+        padding: 10px;
+        border: 1px solid #3E2C41;
+        border-radius: 1%;
+    }
+}
+.card::-webkit-scrollbar{
+    width: 7px;
+}
+.card::-webkit-scrollbar-thumb{
+    background-color:#B2B2B2;
+    border-radius: 20px;
 }
