--- a/scss/layout/_media-320.scss
+++ b/scss/layout/_media-320.scss
@@ -3,10 +3,20 @@
         h1{
             font-size: 35px;
         }
+        h2{
+            font-size: 13px;
+        }
     }
     p{
         font-size: 8.5px;
     }
+    .cover{
+        width: 100px;
+        height: 150px;
+    }
+    section iframe{
+        width: 100px;
+        height: 150px;
     .fot-c{
         a{
             font-size: 13px;
@@ -15,5 +25,6 @@
     }
     .titulo-c{
         font-size: 30px;
+    }
     }
 }
