--- a/scss/layout/_media-437.scss
+++ b/scss/layout/_media-437.scss
@@ -24,10 +24,10 @@
         }
     }
     h1{
-        font-size: 22px;
+        font-size: 20px;
     }
     h2{
-        font-size: 15px;
+        font-size: 14px;
     }
     p{
         font-size: 10px;
@@ -43,7 +43,11 @@
     }
     .cover{
         width: 150px;
-        height: 200px
+        height: 215px
+    }
+    section iframe{
+        width: 150px;
+        height: 215px;
     }
     .card{
         height: 20px;
