--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,7 +16,8 @@ body{
                 grid-area: logo;
                 width: 80px;
                 height: 80px;
-                border-radius: 50%
+                border-radius: 50%;
+                padding: 4px;
             }
         }
         .nav{
