--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -1,16 +1,20 @@
 main{
     h1{
         font-family: $fuente-titulos;
-        font-size: 50px;
+        font-size: 60px;
         display: flex;
         justify-content: center;
+        text-align: center;
     }
     p{
         font-family: $fuente-texto;
-        text-align: justify;
+        text-align: center;
     }
     h2{
         font-family: $fuente-texto;
+        font-size: 22px;
+        text-align:justify;
+        padding: 2px;
     }
 }
 .grid-main{
@@ -52,10 +56,12 @@ section iframe{
     width: 200px;
     height: 300px;
     padding: 2px;
-    border: 1px solid black
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .cover{
     width: 200px;
     height: 300px;
     padding: 2px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
