--- a/scss/layout/_media-991.scss
+++ b/scss/layout/_media-991.scss
@@ -7,7 +7,11 @@
         width: 5px;
     }
     .cover{
-        width: 115px;
-        height: 190px;
+        width: 125px;
+        height: 200px;
+    }
+    section iframe{
+        width: 125px;
+        height: 200px;
     }
 }
