corrigiendo margenes y paddings

--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -39,12 +39,10 @@ main{
     @include sec-index(sec1, 5px, 4px);
 }
 .sec-2{
-    display: grid;
     @include sec-index(sec2, 5px, 4px);
 }
 .sec-3{
     @include sec-index(sec3, 5px, 4px);
-    align-items: center;
 }
 .sec-4{
     @include sec-index(sec4, 5px, 4px);
@@ -55,6 +53,7 @@ main{
 section iframe{
     width: 200px;
     height: 300px;
+    margin-bottom: 10px;
     padding: 2px;
     border: 1px solid black;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -62,6 +61,7 @@ section iframe{
 .cover{
     width: 200px;
     height: 300px;
+    margin-bottom: 10px;
     padding: 2px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
