--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ font-family: 'Noticia Text', serif;
 colors: #F2F1F0 #5C468C
  */
 body {
-  padding: 2px;
   scrollbar-width: thin;
   scrollbar-color: #B2B2B2; }
   body header {
@@ -107,7 +106,6 @@ main h2 {
   padding: 4px; }
 
 .sec-2 {
-  display: grid;
   grid-area: sec2;
   margin: 5px;
   padding: 4px; }
@@ -115,8 +113,7 @@ main h2 {
 .sec-3 {
   grid-area: sec3;
   margin: 5px;
-  padding: 4px;
-  align-items: center; }
+  padding: 4px; }
 
 .sec-4 {
   grid-area: sec4;
@@ -131,6 +128,7 @@ main h2 {
 section iframe {
   width: 200px;
   height: 300px;
+  margin-bottom: 10px;
   padding: 2px;
   border: 1px solid black;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; }
@@ -138,6 +136,7 @@ section iframe {
 .cover {
   width: 200px;
   height: 300px;
+  margin-bottom: 10px;
   padding: 2px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; }
 
@@ -168,7 +167,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    gap: 15px;
     width: fit-content;
     height: 500px;
     overflow: auto;
