--- a/scss/layout/_bootstrap.scss
+++ b/scss/layout/_bootstrap.scss
@@ -33,8 +33,8 @@ nav{
     }
 }
 main{
-    background-image: url("../assets/imagenes/white-wall.jpg");
-    background-size: 100% 100%;
+    // background-image: url("../assets/imagenes/white-wall.jpg");
+    // background-size: 100% 100%;
 }
 .toggler-c{
     background-color: #F2F1F0;
