--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 body{
     scrollbar-width: thin;
     scrollbar-color: #B2B2B2;
+    height: 100%;
     header{
         background-color: #20262E;
         width: 100%;
