--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -25,7 +25,7 @@ main{
     @include grid(repeat(7,auto),repeat(4,auto));
     grid-template-areas:
     "rainbow rainbow rainbow rainbow rainbow rainbow rainbow" 
-    ".  . sec1 sec1 sec1 . ."
+    "sec1  sec1 sec1 sec1 sec1 sec1 sec1"
     "sec2 sec2 sec2 sec2 sec2 sec2 sec2"
     ". sec3 . sec4 . sec5 .";
 }
