--- a/css/style.css
+++ b/css/style.css
@@ -9,57 +9,53 @@
 font-family: 'Noticia Text', serif;
 colors: #F2F1F0 #5C468C
  */
-body {
-  scrollbar-width: thin;
-  scrollbar-color: #B2B2B2;
-  height: 100%; }
-  body header {
-    background-color: #20262E;
+body header {
+  background-color: #20262E;
+  width: 100%;
+  height: 100%;
+  padding: 2px; }
+  body header .grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr;
+    grid-template-areas: "logo . . nav nav nav";
     width: 100%;
-    height: 100%;
-    padding: 2px; }
-    body header .grid {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: 1fr;
-      grid-template-areas: "logo . . nav nav nav";
-      width: 100%;
-      height: 100%; }
-      body header .grid .logo {
-        grid-area: logo;
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        padding: 4px; }
-    body header .nav {
-      display: grid;
-      grid-area: nav;
-      align-items: end;
-      font-size: 23px;
-      flex-wrap: wrap; }
-      body header .nav ul {
-        display: flex;
-        list-style: none;
-        justify-content: space-evenly;
-        padding: 10px; }
-        body header .nav ul li {
-          text-decoration: none;
-          color: white; }
-          body header .nav ul li img {
-            background-color: #F2F1F0;
-            border-radius: 30%;
-            padding: 5px;
-            width: 40px;
-            height: 40px; }
-        body header .nav ul a {
-          text-decoration: none;
-          color: #F2F1F0;
+    height: 100%; }
+    body header .grid .logo {
+      grid-area: logo;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      padding: 4px; }
+  body header .nav {
+    display: grid;
+    grid-area: nav;
+    align-items: end;
+    font-size: 23px;
+    flex-wrap: wrap; }
+    body header .nav ul {
+      display: flex;
+      list-style: none;
+      justify-content: space-evenly;
+      padding: 10px; }
+      body header .nav ul li {
+        text-decoration: none;
+        color: white; }
+        body header .nav ul li img {
+          background-color: #F2F1F0;
+          border-radius: 30%;
           padding: 5px;
-          border-radius: 35%; }
-          body header .nav ul a img:hover {
-            background-color: #E9D5DA;
-            border-radius: 30%;
-            padding: 5px; }
+          width: 40px;
+          height: 40px; }
+      body header .nav ul a {
+        text-decoration: none;
+        color: #F2F1F0;
+        padding: 5px;
+        border-radius: 35%; }
+        body header .nav ul a img:hover {
+          background-color: #E9D5DA;
+          border-radius: 30%;
+          padding: 5px; }
 
 body::-webkit-scrollbar {
   width: 7px; }
@@ -68,32 +64,47 @@ body::-webkit-scrollbar-thumb {
   background-color: #B2B2B2;
   border-radius: 20px; }
 
-main h1 {
-  font-family: "Noticia Text", serif;
-  font-size: 60px;
-  display: flex;
-  justify-content: center;
-  text-align: center; }
-
-main p {
-  font-family: "Poppins", sans-serif;
-  text-align: center; }
-
-main h2 {
-  font-family: "Poppins", sans-serif;
-  font-size: 22px;
-  text-align: justify;
-  padding: 2px; }
+main {
+  background-image: url("../assets/imagenes/white-wall.jpg");
+  background-size: 100% 100%; }
+  main h1 {
+    font-family: "Noticia Text", serif;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-self: center;
+    background-image: url("../assets/imagenes/lgbtq.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 400px;
+    border-radius: 1.5%; }
+  main p {
+    font-family: "Poppins", sans-serif;
+    text-align: center; }
+  main h2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    text-align: justify;
+    padding: 2px; }
+  main h3 {
+    font-family: "Poppins", sans-serif;
+    font-size: 27px;
+    grid-area: div1;
+    text-align: center; }
+  main h4 {
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding-bottom: 20px; }
 
 .grid-main {
   width: 100%;
-  height: 100%;
-  background-image: url("../assets/imagenes/white-wall.jpg");
-  background-size: 100% 100%;
+  gap: 15px 10px;
   display: grid;
-  grid-template-columns: repeat(7, auto);
+  grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(4, auto);
-  grid-template-areas: "rainbow rainbow rainbow rainbow rainbow rainbow rainbow"  "sec1  sec1 sec1 sec1 sec1 sec1 sec1" "sec2 sec2 sec2 sec2 sec2 sec2 sec2" ". sec3 . sec4 . sec5 ."; }
+  grid-template-areas: "rainbow rainbow"  "sec1 sec1" "sec2 sec2" "div1 div1" "sec3 sec4" "sec5 sec6"; }
 
 .rainbow {
   grid-area: rainbow;
@@ -104,89 +115,116 @@ main h2 {
 .sec-1 {
   grid-area: sec1;
   margin: 5px;
-  padding: 4px; }
+  padding: 4px;
+  grid-area: sec1; }
 
 .sec-2 {
   grid-area: sec2;
   margin: 5px;
-  padding: 4px; }
+  padding: 4px;
+  grid-area: sec2; }
 
 .sec-3 {
   grid-area: sec3;
-  margin: 5px;
-  padding: 4px; }
+  padding: 5px;
+  display: flex;
+  flex-direction: column; }
+  .sec-3 a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none; }
+
+section::-webkit-scrollbar {
+  width: 0.5px;
+  opacity: 0.5; }
+
+section::-webkit-scrollbar-thumb {
+  width: 0.5px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 20px; }
+
+.carrousel {
+  display: flex;
+  max-width: 275%;
+  height: 300px;
+  width: 100%;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory; }
+  .carrousel img {
+    width: 100%;
+    object-fit: cover;
+    scroll-snap-align: center; }
 
 .sec-4 {
   grid-area: sec4;
-  margin: 5px;
-  padding: 4px; }
+  padding: 5px; }
 
 .sec-5 {
   grid-area: sec5;
-  margin: 5px;
-  padding: 4px; }
+  padding: 5px; }
 
-section iframe {
-  width: 200px;
-  height: 300px;
-  margin-bottom: 10px;
-  padding: 2px;
-  border: 1px solid black;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; }
+.sec-6 {
+  grid-area: sec6;
+  padding: 5px; }
+
+section img:hover {
+  opacity: 2;
+  filter: contrast(120%); }
 
 .cover {
-  width: 200px;
-  height: 300px;
-  margin-bottom: 10px;
-  padding: 2px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; }
+  width: 100px;
+  height: 230px;
+  padding: 1px; }
 
-main {
-  background-image: url("../assets/imagenes/white-wall.jpg");
-  background-size: 100% 100%; }
-  main p {
-    text-align: justify; }
-  main .grid-main-p {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas: "rainbow rainbow rainbow" "1 1 1" "2 . ." "3 3 3"; }
-  main .titulo {
-    grid-area: 1;
-    color: white; }
-    main .titulo p {
-      align-items: center;
-      justify-content: baseline;
-      text-align: center;
-      font-size: 23px;
-      background-color: rgba(0, 0, 0, 0.5); }
-  main .subtitulo {
-    grid-area: 2; }
-  main .banner {
-    background-image: url("../assets/imagenes/mujeres.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 400px; }
-  main .tapas {
-    grid-area: 3;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1 auto;
-    gap: 20px;
-    display: flex;
-    justify-content: center;
-    padding: 15px; }
-  main .card {
-    display: flex;
-    flex-direction: column;
+main p {
+  text-align: justify; }
+
+main .grid-main-p {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(4, auto);
+  grid-template-areas: "rainbow rainbow rainbow" "1 1 1" "2 . ." "3 3 3"; }
+
+main .titulo {
+  grid-area: 1;
+  color: white; }
+  main .titulo p {
     align-items: center;
-    gap: 15px;
-    width: fit-content;
-    height: 500px;
-    overflow: auto;
-    padding: 10px;
-    border: 1px solid #3E2C41;
-    border-radius: 1%; }
+    justify-content: baseline;
+    text-align: center;
+    font-size: 23px;
+    background-color: rgba(0, 0, 0, 0.5); }
+
+main .subtitulo {
+  grid-area: 2; }
+
+main .banner {
+  background-image: url("../assets/imagenes/mujeres.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px; }
+
+main .tapas {
+  grid-area: 3;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1 auto;
+  gap: 20px;
+  display: flex;
+  justify-content: center;
+  padding: 15px; }
+
+main .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: fit-content;
+  height: 500px;
+  overflow: auto;
+  padding: 10px;
+  border: 1px solid #3E2C41;
+  border-radius: 1%; }
 
 .card::-webkit-scrollbar {
   width: 7px; }
