--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -1,10 +1,19 @@
 main{
+    background-image: url("../assets/imagenes/white-wall.jpg");
+    background-size: 100% 100%;
     h1{
         font-family: $fuente-titulos;
         font-size: 60px;
         display: flex;
         justify-content: center;
         text-align: center;
+        align-self: center;
+        background-image: url('../assets/imagenes/lgbtq.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 400px;
+        // background-color: rgba($color: #000000, $alpha: 0.2);
+        border-radius: 1.5%;
     }
     p{
         font-family: $fuente-texto;
@@ -12,22 +21,34 @@ main{
     }
     h2{
         font-family: $fuente-texto;
-        font-size: 22px;
+        font-size: 14px;
         text-align:justify;
         padding: 2px;
+    }
+    h3{
+        font-family: $fuente-texto;
+        font-size: 27px;
+        grid-area: div1;
+        text-align: center;
+    }
+    h4{
+        font-family: $fuente-texto;
+        font-size: 18px;
+        text-align: center;
+        padding-bottom: 20px;
     }
 }
 .grid-main{
     width: 100%;
-    height: 100%;
-    background-image: url("../assets/imagenes/white-wall.jpg");
-    background-size: 100% 100%;
-    @include grid(repeat(7,auto),repeat(4,auto));
+    gap:15px 10px;
+    @include grid(repeat(2,auto),repeat(4,auto));
     grid-template-areas:
-    "rainbow rainbow rainbow rainbow rainbow rainbow rainbow" 
-    "sec1  sec1 sec1 sec1 sec1 sec1 sec1"
-    "sec2 sec2 sec2 sec2 sec2 sec2 sec2"
-    ". sec3 . sec4 . sec5 .";
+    "rainbow rainbow" 
+    "sec1 sec1"
+    "sec2 sec2"
+    "div1 div1"
+    "sec3 sec4"
+    "sec5 sec6";
 }
 .rainbow{
     grid-area: rainbow;
@@ -37,31 +58,65 @@ main{
 }
 .sec-1{
     @include sec-index(sec1, 5px, 4px);
+    grid-area: sec1;
 }
 .sec-2{
     @include sec-index(sec2, 5px, 4px);
+    grid-area: sec2;
 }
 .sec-3{
-    @include sec-index(sec3, 5px, 4px);
+    grid-area: sec3;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    a{
+        display: flex;
+        flex-direction: row;
+        text-decoration: none;
+    }
 }
+
+section::-webkit-scrollbar{
+    width: 0.5px;
+    opacity: 0.5;
+}
+section::-webkit-scrollbar-thumb{
+    width: 0.5px;
+    background-color:rgba($color: #000000, $alpha: 0.3);
+    border-radius: 20px;
+}
+.carrousel{
+    display: flex;
+    max-width: 275%;
+    height: 300px;
+    width: 100%;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+        img{
+        width: 100%;
+        object-fit: cover;
+        scroll-snap-align: center;
+        }
+}
+
 .sec-4{
-    @include sec-index(sec4, 5px, 4px);
+    grid-area: sec4;
+    padding: 5px;
 }
 .sec-5{
-    @include sec-index(sec5, 5px, 4px);
+    grid-area: sec5;
+    padding: 5px;
 }
-section iframe{
-    width: 200px;
-    height: 300px;
-    margin-bottom: 10px;
-    padding: 2px;
-    border: 1px solid black;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.sec-6{
+    grid-area: sec6;
+    padding: 5px;
+}
+section img:hover{
+    opacity: 2;
+    filter: contrast(120%);
 }
 .cover{
-    width: 200px;
-    height: 300px;
-    margin-bottom: 10px;
-    padding: 2px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 100px;
+    height: 230px;
+    padding: 1px;
 }
