--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -1,6 +1,4 @@
 main{
-    background-image: url("../assets/imagenes/white-wall.jpg");
-    background-size: 100% 100%;
     p{
         text-align: justify;
     }
@@ -42,6 +40,13 @@ main{
     justify-content: center;
     padding: 15px;
 }
+// .cover{
+//     width: 200px;
+//     height: 300px;
+//     margin-bottom: 10px;
+//     padding: 2px;
+//     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+// }
 .card{
     display: flex;
     flex-direction: column;
