--- a/css/style.css
+++ b/css/style.css
@@ -73,18 +73,13 @@ main {
     display: flex;
     justify-content: center;
     text-align: center;
-    align-self: center;
-    background-image: url("../assets/imagenes/lgbtq.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 400px;
-    border-radius: 1.5%; }
+    align-self: center; }
   main p {
     font-family: "Poppins", sans-serif;
     text-align: center; }
   main h2 {
     font-family: "Poppins", sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     text-align: justify;
     padding: 2px; }
   main h3 {
@@ -98,13 +93,18 @@ main {
     text-align: center;
     padding-bottom: 20px; }
 
+.bg-h1 {
+  background-image: url("../assets/imagenes/lgbtq.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px; }
+
 .grid-main {
   width: 100%;
   gap: 15px 10px;
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-template-rows: repeat(4, auto);
-  grid-template-areas: "rainbow rainbow"  "sec1 sec1" "sec2 sec2" "div1 div1" "sec3 sec4" "sec5 sec6"; }
+  grid-template-columns: 3,1fr;
+  grid-template-rows: 7, auto;
+  grid-template-areas: "rainbow rainbow" ". sec1 ." ". sec2 ." ". sec3 ." ". sec4 ." ". sec5 ." ". sec6 ."; }
 
 .rainbow {
   grid-area: rainbow;
@@ -128,7 +128,8 @@ main {
   grid-area: sec3;
   padding: 5px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  box-shadow: #26394d 0px 20px 30px -10px; }
   .sec-3 a {
     display: flex;
     flex-direction: row;
@@ -145,7 +146,8 @@ section::-webkit-scrollbar-thumb {
 
 .carrousel {
   display: flex;
-  max-width: 275%;
+  justify-content: center;
+  max-width: 700px;
   height: 300px;
   width: 100%;
   overflow-x: scroll;
@@ -157,15 +159,36 @@ section::-webkit-scrollbar-thumb {
 
 .sec-4 {
   grid-area: sec4;
-  padding: 5px; }
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: #26394d 0px 20px 30px -10px; }
+  .sec-4 a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none; }
 
 .sec-5 {
   grid-area: sec5;
-  padding: 5px; }
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: #26394d 0px 20px 30px -10px; }
+  .sec-5 a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none; }
 
 .sec-6 {
   grid-area: sec6;
-  padding: 5px; }
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: #26394d 0px 20px 30px -10px; }
+  .sec-6 a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none; }
 
 section img:hover {
   opacity: 2;
